Залатывание дыр, с коммандами опять кринж аааааааааааааааааааа